# ingrosso_2.0

./: CMakeLists.txt  Cart.cpp  Cart.h  CartPage.cpp  CartPage.h  ChooseStatusPage.cpp  ChooseStatusPage.h  Client.cpp  Client.h  Database.cpp  Database.h  Date.cpp  Date.h  Engine.cpp  Engine.h  Favourites.cpp  Favourites.h  FavouritesListPage.cpp  FavouritesListPage.h  ForgotPasswordPage.cpp  ForgotPasswordPage.h  GlobalVariables.cpp  GlobalVariables.h  HomePageClient.cpp  HomePageClient.h  HomePageProviders.cpp  HomePageProviders.h  InitialPage.cpp  InitialPage.h  InsertProductPage.cpp  InsertProductPage.h  LogInPage.cpp  LogInPage.h  ManageProfilePage.cpp  ManageProfilePage.h  ManageRequestPage.cpp  ManageRequestPage.h  ModifyProductPage.cpp  ModifyProductPage.h  MyApp.cpp  (+83 more)
database/: dbStore.sqlite
test/: CMakeLists.txt  CartFixture.cpp  EngineFixture.cpp  FavouritesFixture.cpp  OrdersFixture.cpp  StoreFixture.cpp  UsersFixture.cpp  dbCartFixture.cpp  dbFavouritesFixture.cpp  dbStoreFixture.cpp  runAllTests.cpp
